Issue #3156391 by mahmoud-zayed, julianmancera: Layout breaks in my Bootstrap theme.

--- a/scss/ui/_bg-media.scss
+++ b/scss/ui/_bg-media.scss
@@ -14,7 +14,7 @@
     background: transparent;
   }
 
-  input[type="submit"].button.media-library-item__remove {
+  .button.media-library-item__remove {
     position: absolute;
     z-index: 1;
     top: 10px;
