--- a/scss/ui/_general.scss
+++ b/scss/ui/_general.scss
@@ -7,3 +7,9 @@
 .form-radios > div {
   padding: 0;
 }
+// Bario theme.
+.custom-control-input {
+  opacity: 1;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
