--- a/scss/ui/_tab-layout.scss
+++ b/scss/ui/_tab-layout.scss
@@ -1,6 +1,9 @@
 // Container Type
-.blb_container_type .form-radios {
-  display: flex;
+.blb_container_type {
+  .form-radios,
+  .fieldset-wrapper > div {
+    display: flex;
+  }
 }
 
 .form-item-layout-settings-ui-tab-content-layout-container-type {
@@ -26,6 +29,29 @@
 
     // Active state.
     &:checked + label {
+      color: $gray-444;
+      background-color: $white;
+    }
+  }
+
+  // Custom fix for Bootstrap 3 Drupal theme.
+  label {
+    border: 2px solid white;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+
+    + input {
+      opacity: 0;
+      position: absolute;
+    }
+
+    // Active state.
+    &.active {
       color: $gray-444;
       background-color: $white;
     }
@@ -58,6 +84,7 @@
 
       .blb_breakpoint_col {
         background-color: $white;
+        color: $gray-444;
       }
     }
   }
@@ -67,11 +94,14 @@
     height: 0;
     display: block;
 
-    &:checked + label .blb_breakpoint_col {
+    &:checked + label .blb_breakpoint_col
+     {
       color: $white;
       background-color: #277abd;
     }
   }
+
+  
 }
 
 .blb_breakpoint_col {
@@ -82,4 +112,13 @@
   background-color: rgba($white, .7);
   transition: all .25s ease-out;
   border-radius: 3px;
+
+  &.bp-selected {
+    color: $white;
+    background-color: #277abd;
+
+    &:hover {
+      color: $gray-444;
+    }
+  }
 }
