--- a/scss/ui/_tabs.scss
+++ b/scss/ui/_tabs.scss
@@ -6,7 +6,7 @@
 //
 
 // Our icons/headings
-.blb_nav-tabs {
+#blb_nav-tabs {
   position: relative;
   display: flex;
   justify-content: center;
@@ -64,7 +64,7 @@
 //
 // Hide tabbable panes to start, show them when `.active`
 
-.blb_tab-content {
+#blb_tabContent {
   > .blb_tab-pane {
     display: none;
   }
